Update Task 1 -Simple Linear Regression.ipynb

--- a/Task 1 -Simple Linear Regression.ipynb
+++ b/Task 1 -Simple Linear Regression.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <font color=green><b>Supervised Machine Learning - Linear Regression Model to predict scores based on the studying hours.</b></font> "
+    "## Supervised Machine Learning - Linear Regression Model to predict scores based on the studying hours."
    ]
   },
   {
