Update Task 1 -Simple Linear Regression.ipynb

--- a/Task 1 -Simple Linear Regression.ipynb
+++ b/Task 1 -Simple Linear Regression.ipynb
@@ -30,7 +30,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <font color=\"green\">Importing all the libraries needed for this task</font>"
+    "## Importing all the libraries needed for this task"
    ]
   },
   {
@@ -52,7 +52,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <font color=\"green\">Importing data from a csv file</font>"
+    "## Importing data from a csv file"
    ]
   },
   {
@@ -102,7 +102,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <font color=\"green\">Checking the datatypes</font>"
+    "## Checking the datatypes"
    ]
   },
   {
@@ -131,7 +131,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <font color=\"green\">Pulling the dataset information</font>"
+    "## Pulling the dataset information"
    ]
   },
   {
@@ -234,7 +234,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <font color=\"green\">Checking for missing values</font>"
+    "## Checking for missing values"
    ]
   },
   {
@@ -263,7 +263,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <font color=\"green\">Checking the correlation</font>"
+    "## Checking the correlation"
    ]
   },
   {
@@ -330,7 +330,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <font color=\"green\">Plotting the distribution of scores</font>"
+    "## Plotting the distribution of scores"
    ]
   },
   {
@@ -368,7 +368,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <font color=\"green\">Preparing the Data</font>\n",
+    "## Preparing the Data\n",
     "\n",
     "The next step is to divide the data into \"attributes\" (inputs) and \"labels\" (outputs)."
    ]
@@ -403,7 +403,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <font color=\"green\">**Training the Algorithm**</font>\n",
+    "### **Training the Algorithm**\n",
     "We have split our data into training and testing sets, and now is finally the time to train our algorithm. "
    ]
   },
@@ -431,7 +431,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <font color=\"green\">Plotting the regression line</font>"
+    "## Plotting the regression line"
    ]
   },
   {
@@ -463,7 +463,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <font color=\"green\">**Making Predictions**</font>"
+    "### **Making Predictions**"
    ]
   },
   {
