--- a/Task 1 -Simple Linear Regression (3).ipynb
+++ b/Task 1 -Simple Linear Regression (3).ipynb
@@ -30,7 +30,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <font color=\"green\">Importing all the libraries needed for this task</font>"
+    "## Importing all the libraries needed for this task"
    ]
   },
   {
@@ -52,7 +52,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <font color=\"green\">Importing data from a csv file</font>"
+    "## Importing data from a csv file"
    ]
   },
   {
@@ -102,7 +102,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <font color=\"green\">Checking the datatypes</font>"
+    "## Checking the datatypes"
    ]
   },
   {
@@ -131,7 +131,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <font color=\"green\">Pulling the dataset information</font>"
+    "## Pulling the dataset information"
    ]
   },
   {
@@ -234,7 +234,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <font color=\"green\">Checking for missing values</font>"
+    "## Checking for missing values"
    ]
   },
   {
@@ -263,7 +263,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <font color=\"green\">Checking the correlation</font>"
+    "## Checking the correlation"
    ]
   },
   {
@@ -363,7 +363,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <font color=\"green\">Plotting the distribution of scores</font>"
+    "## Plotting the distribution of scores"
    ]
   },
   {
@@ -408,7 +408,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <font color=\"green\">Preparing the Data</font>\n",
+    "## Preparing the Data\n",
     "\n",
     "The next step is to divide the data into \"attributes\" (inputs) and \"labels\" (outputs)."
    ]
@@ -471,7 +471,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <font color=\"green\">Plotting the regression line</font>"
+    "## Plotting the regression line"
    ]
   },
   {
@@ -503,7 +503,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <font color=\"green\">**Making Predictions**</font>"
+    "### **Making Predictions**"
    ]
   },
   {
